--- a/singolo1.html
+++ b/singolo1.html
@@ -6,5 +6,7 @@
     <title>Singolo</title>
     <link rel="stylesheet" href="singolo1.css" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+  </body>
 </html>
