add: header html

--- a/singolo1.html
+++ b/singolo1.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="singolo1.css" />
   </head>
   <body>
-    <header></header>
+    <header class="header">
+      <div class="wrapper">
+        <a href="" class="logo">SINGOLO<span class="star">*</span> </a>
+        <nav class="header__navigation">
+          <ul class="navigation">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="slider-block"></section>
+      <section class="our-services-block"></section>
+    </main>
   </body>
 </html>
