--- a/singolo1.html
+++ b/singolo1.html
@@ -23,7 +23,29 @@
     </header>
     <main>
       <section class="slider-block"></section>
-      <section class="our-services-block"></section>
+      <section class="our-services-block">
+        <div class="wrapper">
+          <h1>Our Services</h1>
+          <p>
+            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+            Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
+            lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+            tortor mauris condimentum nibh.
+          </p>
+          <div class="layout-3-column">
+            <div class="services">
+              <span class="icon icon_pencil"></span>
+              <div class="services__content">
+                <h3>Custom Design</h3>
+                <p class="services__title">
+                  Curabitur vestibulum eget mauris quis laoreet. Phasellus in
+                  qua
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
