fix: html and add: image

--- a/singolo1.html
+++ b/singolo1.html
@@ -1,51 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Singolo</title>
-    <link rel="stylesheet" href="singolo1.css" />
-  </head>
-  <body>
-    <header class="header">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Singolo</title>
+  <link rel="stylesheet" href="singolo1.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="wrapper">
+      <h1 class="logo">SINGOLO<span class="logo__star">*</span></h1>
+      <nav class="header__navigation">
+        <ul class="navigation">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="slider-block">
       <div class="wrapper">
-        <a href="" class="logo">SINGOLO<span class="star">*</span> </a>
-        <nav class="header__navigation">
-          <ul class="navigation">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
+        <img class="slider-block__chev_prev" src="/assets/image/slider/chev.png" alt="prev">
+        <img class="slider-block__iphone_vertical" src="/assets/image/slider/iPhone Vertical.png" alt="iPhone Vertical">
+        <img class="slider-block__iphone_horisontal" src="/assets/image/slider/iPhone Horizontal.png"
+          alt="iPhone Horizontal">
+        <img class="slider-block__chev_next" src="/assets/image/slider/chev.png" alt="next">
       </div>
-    </header>
-    <main>
-      <section class="slider-block"></section>
-      <section class="our-services-block">
-        <div class="wrapper">
-          <h1>Our Services</h1>
-          <p>
-            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
-            Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
-            lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
-            tortor mauris condimentum nibh.
-          </p>
-          <div class="layout-3-column">
-            <div class="services">
-              <span class="icon icon_pencil"></span>
-              <div class="services__content">
-                <h3>Custom Design</h3>
-                <p class="services__title">
-                  Curabitur vestibulum eget mauris quis laoreet. Phasellus in
-                  qua
-                </p>
-              </div>
+    </section>
+    <section class="our-services-block">
+      <div class="wrapper">
+        <h2>Our Services</h2>
+        <p>
+          Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+          Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
+          lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+          tortor mauris condimentum nibh.
+        </p>
+        <div class="layout-3-column">
+          <div class="services">
+            <span class="icon icon__pencil"></span>
+            <div class="services__content">
+              <h4>Custom Design</h4>
+              <p class="services__title">
+                Curabitur vestibulum eget mauris quis laoreet. Phasellus in
+                qua
+              </p>
+            </div>
+          </div>
+          <div class="services">
+            <span class="icon icon__bulb"></span>
+            <div class="services__content">
+              <h4>Inovative Ideas</h4>
+              <p class="services__title">
+                Quisque luctus, quam eget molestie commodo, lacus purus cursus
+              </p>
+            </div>
+          </div>
+          <div class="services">
+            <span class="icon icon__heart"></span>
+            <div class="services__content">
+              <h4>Love Is The Answer</h4>
+              <p class="services__title">
+                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turp
+              </p>
+            </div>
+          </div>
+          <div class="services">
+            <span class="icon icon__phone"></span>
+            <div class="services__content">
+              <h4>Responsive Layout</h4>
+              <p class="services__title">
+                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas bla
+              </p>
+            </div>
+          </div>
+          <div class="services">
+            <span class="icon icon__bubble"></span>
+            <div class="services__content">
+              <h4>24/7 Support</h4>
+              <p class="services__title">
+                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nul
+              </p>
+            </div>
+          </div>
+          <div class="services">
+            <span class="icon icon__star"></span>
+            <div class="services__content">
+              <h4>Feel Like A Star</h4>
+              <p class="services__title">
+                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nib
+              </p>
             </div>
           </div>
         </div>
-      </section>
-    </main>
-  </body>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
