--- a/singolo1.html
+++ b/singolo1.html
@@ -10,15 +10,15 @@
 
 <body>
   <header class="header">
-    <div class="wrapper">
+    <div class="wrapper header__wrapper">
       <h1 class="logo">SINGOLO<span class="logo__star">*</span></h1>
       <nav class="header__navigation">
         <ul class="navigation">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li class="navigation__link"><a href="#">Home</a></li>
+          <li class="navigation__link"><a href="#">Services</a></li>
+          <li class="navigation__link"><a href="#">Portfolio</a></li>
+          <li class="navigation__link"><a href="#">About</a></li>
+          <li class="navigation__link"><a href="#">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -26,11 +26,12 @@
   <main>
     <section class="slider-block">
       <div class="wrapper">
-        <img class="slider-block__chev_prev" src="/assets/image/slider/chev.png" alt="prev">
-        <img class="slider-block__iphone_vertical" src="/assets/image/slider/iPhone Vertical.png" alt="iPhone Vertical">
+        <img class="slider-block__chev_prev" src="/assets/image/slider/chev.png" alt="prev" />
+        <img class="slider-block__iphone_vertical" src="/assets/image/slider/iPhone Vertical.png"
+          alt="iPhone Vertical" />
         <img class="slider-block__iphone_horisontal" src="/assets/image/slider/iPhone Horizontal.png"
-          alt="iPhone Horizontal">
-        <img class="slider-block__chev_next" src="/assets/image/slider/chev.png" alt="next">
+          alt="iPhone Horizontal" />
+        <img class="slider-block__chev_next" src="/assets/image/slider/chev.png" alt="next" />
       </div>
     </section>
     <section class="our-services-block">
@@ -67,7 +68,8 @@
             <div class="services__content">
               <h4>Love Is The Answer</h4>
               <p class="services__title">
-                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turp
+                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                turp
               </p>
             </div>
           </div>
@@ -76,7 +78,8 @@
             <div class="services__content">
               <h4>Responsive Layout</h4>
               <p class="services__title">
-                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas bla
+                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
+                bla
               </p>
             </div>
           </div>
@@ -85,7 +88,8 @@
             <div class="services__content">
               <h4>24/7 Support</h4>
               <p class="services__title">
-                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nul
+                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
+                Nul
               </p>
             </div>
           </div>
@@ -94,7 +98,8 @@
             <div class="services__content">
               <h4>Feel Like A Star</h4>
               <p class="services__title">
-                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nib
+                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra
+                nib
               </p>
             </div>
           </div>
