--- a/singolo1.html
+++ b/singolo1.html
@@ -26,12 +26,12 @@
   <main>
     <section class="slider-block">
       <div class="wrapper">
-        <img class="slider-block__chev_prev" src="/assets/image/slider/chev.png" alt="prev" />
+        <img class="slider-block__chev slider-block__chev_prev" src="/assets/image/slider/chev.png" alt="prev" />
         <img class="slider-block__iphone_vertical" src="/assets/image/slider/iPhone Vertical.png"
           alt="iPhone Vertical" />
         <img class="slider-block__iphone_horisontal" src="/assets/image/slider/iPhone Horizontal.png"
           alt="iPhone Horizontal" />
-        <img class="slider-block__chev_next" src="/assets/image/slider/chev.png" alt="next" />
+        <img class=" slider-block__chev slider-block__chev_next" src="/assets/image/slider/chev.png" alt="next" />
       </div>
     </section>
     <section class="our-services-block">
