--- a/singolo1.html
+++ b/singolo1.html
@@ -35,7 +35,7 @@
       </div>
     </section>
     <section class="our-services-block">
-      <div class="wrapper">
+      <div class="wrapper our-services-block__wrapper">
         <h2>Our Services</h2>
         <p>
           Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
