--- a/singolo1.html
+++ b/singolo1.html
@@ -49,8 +49,8 @@
             <div class="services__content">
               <h4>Custom Design</h4>
               <p class="services__title">
-                Curabitur vestibulum eget mauris quis laoreet. Phasellus in
-                qua
+                Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices
+                velit.
               </p>
             </div>
           </div>
@@ -59,7 +59,7 @@
             <div class="services__content">
               <h4>Inovative Ideas</h4>
               <p class="services__title">
-                Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
               </p>
             </div>
           </div>
@@ -68,8 +68,8 @@
             <div class="services__content">
               <h4>Love Is The Answer</h4>
               <p class="services__title">
-                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
-                turp
+                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
+                condimentum.
               </p>
             </div>
           </div>
@@ -78,18 +78,17 @@
             <div class="services__content">
               <h4>Responsive Layout</h4>
               <p class="services__title">
-                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
-                bla
+                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.
               </p>
             </div>
           </div>
           <div class="services">
             <span class="icon icon__bubble"></span>
             <div class="services__content">
-              <h4>24/7 Support</h4>
+              <h4>24 / 7 Support</h4>
               <p class="services__title">
-                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
-                Nul
+                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas
+                venenatis lorem .
               </p>
             </div>
           </div>
@@ -98,8 +97,7 @@
             <div class="services__content">
               <h4>Feel Like A Star</h4>
               <p class="services__title">
-                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra
-                nib
+                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
               </p>
             </div>
           </div>
