--- a/singolo1.html
+++ b/singolo1.html
@@ -56,7 +56,7 @@
             lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
             tortor mauris condimentum nibh.
           </p>
-          <div class="layout-3-column">
+          <div class="layout-3-column our-services-block__layouts">
             <div class="services">
               <span class="icon icon__pencil"></span>
               <div class="services__content">
