--- a/singolo2.html
+++ b/singolo2.html
@@ -37,6 +37,67 @@
           </div>
         </div>
       </section>
+      <section class="about-us">
+        <div class="wrapper about-us__wrapper">
+          <h2 class="about-us__title">About Us</h2>
+          <p class="about-us__text">
+            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+            Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
+            lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+            tortor mauris condimentum nibh.
+          </p>
+          <div class="layout-3-column">
+            <div class="about-us__people">
+              <div class="about-us__image">
+                <img src="assets/image/about-us/Adam.jpg" alt="Adam" />
+              </div>
+              <div class="about-us__content">
+                <h4 class="people__title">Adam Jensen</h4>
+                <p class="people__text">
+                  Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                  purus, nec rutrum tellus dolor id lorem.
+                </p>
+                <span class="icon icon__facebook"></span>
+                <span class="icon icon__google"></span>
+                <span class="icon icon__twitter"></span>
+                <span class="icon icon__in"></span>
+              </div>
+            </div>
+            <div class="about-us__people">
+              <div class="about-us__image">
+                <img src="assets/image/about-us/Desmond.jpg" alt="Desmond" />
+              </div>
+              <div class="about-us__content">
+                <h4 class="people__title">Desmond Miles</h4>
+                <p class="people__text">
+                  Curabitur vestibulum eget mauris quis laoreet. Phasellus in
+                  quam laoreet, viverra lacus ut, ultrices velit.
+                </p>
+                <span class="icon icon__facebook"></span>
+                <span class="icon icon__google"></span>
+                <span class="icon icon__twitter"></span>
+                <span class="icon icon__in"></span>
+              </div>
+            </div>
+            <div class="about-us__people">
+              <div class="about-us__image">
+                <img src="assets/image/about-us/Scolara.jpg" alt="Scolara" />
+              </div>
+              <div class="about-us__content">
+                <h4 class="people__title">Scolara Visari</h4>
+                <p class="people__text">
+                  Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                  turpis, et consequat felis. Quisque condimentum.
+                </p>
+                <span class="icon icon__facebook"></span>
+                <span class="icon icon__google"></span>
+                <span class="icon icon__twitter"></span>
+                <span class="icon icon__in"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
