--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
         <h1 class="logo">SINGOLO<span class="logo__star">*</span></h1>
         <nav class="header__navigation">
           <ul class="navigation">
-            <li class="navigation__link"><a href="#">Home</a></li>
-            <li class="navigation__link"><a href="#">Services</a></li>
-            <li class="navigation__link"><a href="#">Portfolio</a></li>
-            <li class="navigation__link"><a href="#">About</a></li>
-            <li class="navigation__link"><a href="#">Contact</a></li>
+            <li class="navigation__link"><a href="#slider-block">Home</a></li>
+            <li class="navigation__link">
+              <a href="#our-services-block">Services</a>
+            </li>
+            <li class="navigation__link"><a href="#portfolio">Portfolio</a></li>
+            <li class="navigation__link"><a href="#about-us">About</a></li>
+            <li class="navigation__link"><a href="#qoute">Contact</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
-      <section class="slider-block">
+      <section id="slider-block" class="slider-block">
         <div class="wrapper">
           <img
             class="slider-block__chev slider-block__chev_prev"
@@ -47,7 +49,7 @@
           />
         </div>
       </section>
-      <section class="our-services-block">
+      <section id="our-services-block" class="our-services-block">
         <div class="wrapper our-services-block__wrapper">
           <h2>Our Services</h2>
           <p>
@@ -120,7 +122,7 @@
           </div>
         </div>
       </section>
-      <section class="portfolio">
+      <section id="portfolio" class="portfolio">
         <div class="wrapper portfolio__wrapper">
           <h2 class="portfolio__title">Portfolio</h2>
           <p class="portfolio__text">
@@ -149,7 +151,7 @@
           </div>
         </div>
       </section>
-      <section class="about-us">
+      <section id="about-us" class="about-us">
         <div class="wrapper about-us__wrapper">
           <h2 class="about-us__title">About Us</h2>
           <p class="about-us__text">
@@ -210,7 +212,7 @@
           </div>
         </div>
       </section>
-      <section class="qoute">
+      <section id="qoute" class="qoute">
         <div class="wrapper qoute__wrapper">
           <h2 class="qoute__title">Get a Quote</h2>
           <p class="qoute__text">
